java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ImportClassTest/testImportHint-hints.pass
Add import for java.util.List
Add import for java.awt.List
Add import for com.sun.tools.javac.util.List
